# uranography

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: build.yaml  build_docs.yaml  lint.yaml  python_tests.yaml  ruff.yaml
docs/: api.rst  architecture.rst  architecture_rst_to_do  asphere.html  conf.py  documenteer.toml  index.rst  installation.rst  introduction.rst  mollweide.html  planisphere.html  tutorials.rst  usage.rst
docs/source/: api.rst  index.rst  introduction.rst  mollweide.html  usage.rst
docs/usage_figures/: adjusted_healpix.html  basic_healpix.html  basic_planisphere.html  simple_horizon.html
notebooks/: exposures.txt  intro_example.ipynb  r_depth.fits  rubin_idealized.txt  sample_survey_footprint.fits  spheremap.ipynb  uranography.ipynb
spheremap/: __init__.py  api.py  armillary.py  camera.py  horizon.py  mollweide.py  planisphere.py  readjs.py  sphere.py  spheremap.py  stars.py
spheremap/js/: coord_utils.js  horizon.js  hp.js  laea.js  orthographic.js
tests/: helpers.py  test_armillary.py  test_horizon.py  test_mollweide.py  test_planisphere.py  test_readjs.py  test_sphere.py  test_spheremap.py  test_stars.py
uranography/: api.py  armillary.py  camera.py  horizon.py  mollweide.py  planisphere.py  readjs.py  sphere.py  spheremap.py  stars.py
uranography/js/: coord_utils.js  horizon.js  hp.js  laea.js  match_eq_horizon_sliders.js  mollweide.js  orthographic.js  update.js  update_map.js
(+1 files in other folders)
