[metadata]
name = uranography
description = Tools for interactive visualization of the celestial sphere
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric H. Neilsen, Jr.
url = https://github.com/lsst/uranography
author_email = neilsen@fnal.gov
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.9
install_requires =
  numpy
  pandas
  astropy >= 4.0
  healpy
  bokeh
tests_require =
  pytest
  flake8
  jupyter
  nbconvert
zip_safe = True


[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
  bin,
  doc/conf.py,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503
